<resources>
    <string name="app_name">Pr5</string>
    <string name="gotoA">Go to FragmentA!</string>
    <string name="gotoB">Go to FragmentB!</string>
    <string name="button">BUTTON</string>
    <string name="image">image</string>
    <string name="text">Text</string>
    <string name="fragment_a">Fragment A</string>
    <string name="fragment_b">Fragment B</string>
    <string name="get_back">get back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>