<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainScreen">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.143">

        <TextView
            android:id="@+id/textViewB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/gotoB"
            android:textSize="@dimen/text" />

        <Button
            android:id="@+id/buttonB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/yellow"
            android:padding="@dimen/padding"
            android:text="@string/button"
            android:textColor="@color/purple_200"
            android:textSize="@dimen/text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/gotoA"
            android:textSize="@dimen/text" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/yellow"
            android:padding="@dimen/padding"
            android:text="@string/button"
            android:textColor="@color/purple_200"
            android:textSize="@dimen/text" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="300dp"
        android:layout_height="500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.585"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.668">

        <EditText
            android:id="@+id/edit"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="50dp"
            android:autofillHints=""
            android:hint="@string/text"
            android:inputType="text"
            tools:ignore="LabelFor" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="400dp"
            android:layout_height="220dp"
            android:layout_above="@+id/svg"
            android:layout_below="@+id/edit"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="25dp"
            android:contentDescription="@string/image"
            android:src="@drawable/draw_new" />

        <ImageView
            android:id="@+id/svg"
            android:layout_width="400dp"
            android:layout_height="180dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0dp"
            android:contentDescription="@string/image"
            android:src="@drawable/cosmos" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>